<resources>
    <string name="app_name">klip sdk sample</string>

    <!-- common -->
    <string name="bapp_name_hint">my app</string>
    <string name="bapp_name_hint_success">myApp://service-success-url</string>
    <string name="bapp_name_hint_fail">myApp://service-fail-url</string>

    <!-- prepare (klay) -->
    <string name="send_klay_to_address_hint">0x2d9aea5038ca7efac0ebe1b627104c7ece1a3d1a</string>
    <string name="send_klay_amount_hint">1</string>

    <!-- prepare (token) -->
    <string name="send_token_contract_address_hint">0x9a8d41a4CB5F8ff42954D7A667a7a84a55a3CEc8</string>
    <string name="send_token_to_address_hint">0x2d9aea5038ca7efac0ebe1b627104c7ece1a3d1a</string>
    <string name="send_token_amount_hint">1</string>

    <!-- prepare (card) -->
    <string name="send_card_contract_address_hint">0xcda6be802fa1f6861a5a574f5e349ea2b3f2d175</string>
    <string name="send_card_id_hint">2868</string>
    <string name="send_card_to_address_hint">0x2d9aea5038ca7efac0ebe1b627104c7ece1a3d1a</string>

    <!-- prepare (contract) -->
    <string name="execute_contract_address_hint">0xcda6be802fa1f6861a5a574f5e349ea2b3f2d175</string>
    <string name="execute_contract_value_hint">0</string>
    <string name="execute_contract_abi_hint">{\"constant\":false,\"inputs\":[{\"name\":\"from\",\"type\":\"address\"},{\"name\":\"to\",\"type\":\"address\"},{\"name\":\"tokenId\",\"type\":\"uint256\"}],\"name\":\"safeTransferFrom\",\"outputs\":[],\"payable\":false,\"stateMutability\":\"nonpayable\",\"type\":\"function\"}</string>
    <string name="execute_contract_params_hint">[\"0x120E120bB50fD36847FA93197217d956b6ad1E93\",\"0x2d9aea5038ca7efac0ebe1b627104c7ece1a3d1a\", \"2868\"]</string>

    <!-- prepare (contract) -->
    <string name="get_card_list_sca_hint">0xcda6be802fa1f6861a5a574f5e349ea2b3f2d175</string>
    <string name="get_card_list_ea_hint">0x120E120bB50fD36847FA93197217d956b6ad1E93</string>
    <string name="get_card_list_cursor_hint"></string>

</resources>
